# Policy-Explainer---RAG-Based-Health-Insurance-Document-Intelligence-System

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE.md  README.md  SET_UP.md  TEAM_CONTRIBUTIONS.md  USER_GUIDE.md  evaluation.py  ingestion.py  main.py  pyproject.toml  qa.py  requirements.txt  storage.py  test_evaluation_runner.py  test_orchestrator.py  test_scenario_generator.py  test_summarizer.py
Test/: __init__.py  test_chunker.py  test_qa_engine.py  test_sections.py  test_validation_confidence.py
Test /: test_doc_store.py
backend/: __init__.py  api.py  config.py  evaluation.py  ingestion.py  main.py  qa.py  retrieval.py  schemas.py  storage.py  summarization.py  utils.py
data/documents/: .gitkeep
frontend/: app.py
frontend/components/: chat.py  dashboard.py  hero.py  sidebar.py
frontend/utils/: pdf_generator.py  state.py  style.py
schema/: jargon_terms.json  summary_schema.json  terminology_map.json
tests/: conftest.py  test_normalize_terms.py  test_pdf_parser.py  test_preventive_helper.py  test_retrieval.py  test_section_deep_dive.py  test_vector_store.py
