# Project configuration for PolicyExplainer: build settings, dependencies, and tool configs.
# Specifies setuptools as the tool used to build and install the project
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Defines project information and the main Python packages required to run PolicyExplainer
[project]
name = "policy-explainer"
version = "0.1.0"
description = "AI-powered health insurance policy document explanation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.29.0",
    "pymupdf>=1.23.0",
    "chromadb>=0.4.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.0.0",
]

# Packages used for testing and development (not required to run the application)
[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

# Specifies which folders contain the Python application code (backend and frontend)
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]

# Defines how automated tests are executed and where test files are located
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]